deploy/k8s/03-sidecar-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmon-archify-sidecar
  namespace: mfsada
  labels:
    app: rtmon-archify-sidecar
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: http
  selector:
    app: rtmon-archify-sidecar
